FireAlarmApplication.Web/mtg_debug_20260127_163129.txt

=== MTG FIRE DEBUG ===
Time: 2026-01-27 16:31:29
NetCDF: C:\Users\kubil\AppData\Local\Temp\b081b2ac-41a8-45dc-83a9-051ab93726ad.nc

=== PYTHON STDERR (Debug Output) ===
  File "C:\Users\kubil\source\repos\FireAlarmApplication\FireAlarmApplication.Web\Scripts\parse_mtg_fire.py", line 32
    max_lat = float(parts[2])x""
                             ^
SyntaxError: invalid syntax


=== PYTHON STDOUT (JSON Output) ===


=== EXIT CODE ===
1
